Adding a 'Take the tour' button on the Tor and Global stats page

--- a/templates/customStats.html
+++ b/templates/customStats.html
@@ -20,9 +20,9 @@
     </h1>
     <div data-ste="13" data-intro="Thank you for following this quick introduction! You can see it again by clicking on the 'Take the tour'
         button at anytime during your visit. You can continue the tour to other pages bly clicking on 'Continue the tour'.">
-        First visit? &nbsp;
+        {{ _('First visit?') }} &nbsp;
         <button type="button" class="btn btn-default" onclick="startTour()">
-            Take the tour
+            {{ _('Take the tour') }}
         </button>
     </div>
 
