Adding a precision in the tour of the FP page

--- a/templates/fp.html
+++ b/templates/fp.html
@@ -71,7 +71,8 @@
     <br>
 
     <h1 data-intro="Below are the results of the fingerprinting process. Each table is composed of three columns: the name of the attribute, the value of this attribute collected from your browser and statistics on how popular or widespread your sent value is.
-                 If you are using the Tor browser, you can even get some extra information to see if returned values are acceptable or not (i.e. they are normal and they follow Tor guidelines). The 'Download as JSON' button becomes active as soon as all tests are run." data-step="3">
+                 The higher the percentages are, the better it is for your online privacy. If you are using the Tor browser, you can even get some extra information to see if returned values are acceptable or not (i.e. they are normal and they
+                 follow Tor guidelines). The 'Download as JSON' button becomes active as soon as all tests are run." data-step="3">
         {{ _('Results') }} &nbsp;
         <a id="dlBtn" type="button" class="btn btn-default btn-md disabled">
             <i class="fa fa-download" aria-hidden="true"></i> {{ _('Download as JSON') }}
