Fixing link in About page

--- a/templates/about.html
+++ b/templates/about.html
@@ -50,7 +50,7 @@
                                 &nbsp;{{ _('Official website') }}
                             </a>
                             <br><br>
-                            <a href="https://summerofcode.withgoogle.com/projects/#5574889654190080" class="btn btn-primary" role="button">
+                            <a href="https://summerofcode.withgoogle.com/archive/2016/projects/5915605559410688/" class="btn btn-primary" role="button">
                                 <i class="fa fa-external-link" aria-hidden="true"></i>
                                 &nbsp;{{ _('Link to project') }}
                             </a>
