Add a summary of the acceptable values
We add a summary saying whether all the attributes have an acceptable
value, or listing the attributes which don't have an acceptable value.

https://trac.torproject.org/projects/tor/ticket/22586

--- a/templates/fp.html
+++ b/templates/fp.html
@@ -66,7 +66,12 @@
         <br>
         <h3><i class="fa fa-minus fa-border" style="color:#A3A3C2"></i> {{ _('Unchecked value') }}</h3>
         {{ _('The attribute is not checked and can take any value.') }}
+
+        <div id="acceptableSummary">
+            <h2>Acceptable Values Summary</h2>
+        </div>
     </div>
+
 
     <br>
 
